--- a/erb-apps/src/app/header/header.component.html
+++ b/erb-apps/src/app/header/header.component.html
@@ -1,19 +1,24 @@
-<button mat-icon-button [matMenuTriggerFor]="menu">
-    <mat-icon>menu</mat-icon>
-</button>
-<mat-menu #menu="matMenu">
-    <button mat-menu-item>
-        <mat-icon>home</mat-icon>
-        <span>Home</span>
+<div id="centerLane">
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>menu</mat-icon>
     </button>
-    <button mat-menu-item>
-        <mat-icon>arrow_downward</mat-icon>
-        <span>Downloads</span>
-    </button>
-    <button mat-menu-item>
-        <mat-icon>info</mat-icon>
-        <span>About</span>
-    </button>
-</mat-menu>
-<img src="assets/img/logo.png">
-<h3>{{subtitle}}</h3>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+            <mat-icon>home</mat-icon>
+            <span>Home</span>
+        </button>
+        <button mat-menu-item>
+            <mat-icon>arrow_downward</mat-icon>
+            <span>Downloads</span>
+        </button>
+        <button mat-menu-item>
+            <mat-icon>info</mat-icon>
+            <span>About</span>
+        </button>
+    </mat-menu>
+    <div>
+        <img src="assets/img/logo.png">
+        <h3>{{subtitle}}</h3>
+    </div>
+</div>
+
