--- a/erb-apps/src/app/header/header.component.less
+++ b/erb-apps/src/app/header/header.component.less
@@ -1,6 +1,19 @@
+#centerLane {
+  width: 60%;
+  margin: auto;
+}
+
+img {
+  position: relative;
+  top: -50px;
+  left: 250px;
+}
+
 h3 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 175%;
+    position: relative;
+    top: -75px;
+    left: 200px;
   }
-  
