Implemented basic components, routing, and tests for the different parts of the site.

--- a/erb-apps/src/app/header/header.component.html
+++ b/erb-apps/src/app/header/header.component.html
@@ -3,15 +3,15 @@
         <mat-icon>menu</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-        <button mat-menu-item>
+        <button mat-menu-item (click)="goHome()">
             <mat-icon>home</mat-icon>
             <span>Home</span>
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item (click)="goToDownloads()">
             <mat-icon>arrow_downward</mat-icon>
             <span>Downloads</span>
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item (click)="goToAbout()">
             <mat-icon>info</mat-icon>
             <span>About</span>
         </button>
