Added default route. Added basic layout to About page.

--- a/erb-apps/src/app/about/about.component.html
+++ b/erb-apps/src/app/about/about.component.html
@@ -1,12 +1,14 @@
-<div>About ERB Applications
-- ERB Apps as a tangible thing
-
-    Current Staff:
-    Ben - President, Founder, & CEO
-    Logan - Chief Technical Officer
-
-    ERB Apps is made up of anyone that wants to be involved.
-    This site is a portal to our solutions, tips and applications. The website itself is an ongoing project to learn different web-based technologies. It was originally written in ASP.NET, then translated into PHP. The site includes jQuery, AJAX, a MySQL DB, and various other web languages.
-
-    Get in touch with me - ben@erbapps.com
+<div>
+    <h1>About ERB Applications</h1>
+    <h3>ERB Apps as a tangible thing</h3>
+    <ul>
+        <header>Current Staff:</header>
+        <li>Ben - The Guy</li>
+    </ul>
+    <span>This site is a portal to our solutions, tips and applications. The website itself is an ongoing project to learn different web-based technologies. </span>
+    <ul>
+        <li>The current website is written using the Angular framework with a goal of greater than 90% code-coverage.</li>
+        <li>The old site was originally written in ASP.NET, then translated into PHP. The site included jQuery, and a MySQL DB.</li>
+    </ul>
+    <span>Get in touch with me - <a href="mailto:ben@erbapps.com">ben@erbapps.com</a></span>
 </div>
