--- a/erb-apps/src/app/header/header.component.less
+++ b/erb-apps/src/app/header/header.component.less
@@ -5,18 +5,16 @@ div.page {
 }
 
 img {
-  float: right;
-  // position: relative;
-  // top: -50px;
-  // left: 250px;
+  position: relative;
+  top: -50px;
+  left: 250px;
 }
 
 h3 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 175%;
-    float: right;
-    // position: relative;
-    // top: -75px;
-    // left: 200px;
+    position: relative;
+    top: -75px;
+    left: 200px;
   }
