--- a/erb-apps/src/app/blog/blog.component.less
+++ b/erb-apps/src/app/blog/blog.component.less
@@ -4,3 +4,15 @@ div.page {
     margin-right: auto;
     background-color: #f0f0f0;
 }
+
+h1 {
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 200%;
+}
+
+h3 {
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 175%;
+}
