--- a/erb-apps/src/app/header/header.component.less
+++ b/erb-apps/src/app/header/header.component.less
@@ -5,16 +5,8 @@ div.page {
 }
 
 img {
-  position: relative;
-  top: -50px;
-  left: 250px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-h3 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 175%;
-    position: relative;
-    top: -75px;
-    left: 200px;
-  }
+
