--- a/erb-apps/src/app/blog/blog.component.html
+++ b/erb-apps/src/app/blog/blog.component.html
@@ -4,8 +4,8 @@
     <ul class="blog">
         <li *ngFor="let post of blogPosts" (click)="onSelect(post)">
             <mat-card>
-                <mat-card-title>{{post.post_subject}} by {{post.user}} on {{post.date_posted | date}}</mat-card-title>
-                <mat-card-content>{{post.post_body}}</mat-card-content>
+                <mat-card-title>{{post.Subject}} by {{post.User}} on {{post.DatePosted | date}}</mat-card-title>
+                <mat-card-content>{{post.Body}}</mat-card-content>
             </mat-card>
         </li>
     </ul>
