Initial stubbing out of Blog Post creation.

--- a/erb-apps/src/app/blog/blog.component.html
+++ b/erb-apps/src/app/blog/blog.component.html
@@ -1,11 +1,12 @@
 <div class="page">
     <h1>{{title}}</h1>
     <h3>{{subtitle}}</h3>
+    <button mat-button (click)="createPost()">Create Post</button>
     <ul class="blog">
         <li *ngFor="let post of blogPosts" (click)="onSelect(post)">
             <mat-card>
-                <mat-card-title>{{post.Subject}} by {{post.User}} on {{post.DatePosted | date}}</mat-card-title>
-                <mat-card-content>{{post.Body}}</mat-card-content>
+                <mat-card-title>{{post.subject}} by {{post.poster}} on {{post.dateposted | date}}</mat-card-title>
+                <mat-card-content>{{post.body}}</mat-card-content>
             </mat-card>
         </li>
     </ul>
