--- a/erb-apps/src/app/app.component.html
+++ b/erb-apps/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<mat-divider></mat-divider>
-<router-outlet></router-outlet>
+<mat-card id="site-card">
+    <app-header></app-header>
+    <mat-divider></mat-divider>
+    <router-outlet></router-outlet>
+</mat-card>
