--- a/erb-apps/src/app/app.component.less
+++ b/erb-apps/src/app/app.component.less
@@ -1,7 +1,9 @@
-app-root {
+mat-card#site-card {
     background: #ebebeb url(/erb-apps/src/assets/img/hexagon12x10.png) 50% 50% repeat;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
 }
-
 mat-divider {
     width: 60%;
     margin-left: auto;
