--- a/erb-apps/src/app/blog/blog.component.less
+++ b/erb-apps/src/app/blog/blog.component.less
@@ -1,18 +1,30 @@
-div.page {
-    width: 60%;
+div#page {
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     background-color: #f0f0f0;
 }
 
+mat-card {
+    margin-bottom: 5px;
+}
+
+.post-title {
+    font-size: 125%;
+}
+
+.post-body {
+    padding-top: 5px;
+}
+
 h1 {
-    color: #369;
+    color: #447821;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 200%;
 }
 
 h3 {
-    color: #369;
+    color: #447821;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 175%;
 }
