--- a/erb-apps/src/app/blog/create-post/create-post.component.html
+++ b/erb-apps/src/app/blog/create-post/create-post.component.html
@@ -1,9 +1,11 @@
-<div>
-    <mat-form-field >
-        <input #subject matInput placeholder="Subject">
-    </mat-form-field>
-    <mat-form-field >
-        <textarea #body matInput placeholder="Body"></textarea>
-    </mat-form-field>
-    <button mat-button (click)="submit(subject.value, body.value)">Submit</button>
+<div id="dialog">
+    <mat-card>
+        <mat-form-field >
+            <input #subject matInput placeholder="Subject">
+        </mat-form-field>
+        <mat-form-field >
+            <textarea #body matInput placeholder="Body"></textarea>
+        </mat-form-field>
+        <button mat-button (click)="submit(subject.value, body.value)">Submit</button>
+    </mat-card>
 </div>
