Went mat-card crazy with layout changes. Hopefully it's more organized.

--- a/erb-apps/src/app/about/about.component.html
+++ b/erb-apps/src/app/about/about.component.html
@@ -1,14 +1,17 @@
 <div id="page">
-    <h1>About ERB Applications</h1>
-    <h3>ERB Apps as a tangible thing</h3>
-    <ul>
-        <header>Current Staff:</header>
-        <li>Ben - The Guy</li>
-    </ul>
-    <span>This site is a portal to our solutions, tips and applications. The website itself is an ongoing project to learn different web-based technologies. </span>
-    <ul>
-        <li>The current website is written using the Angular framework with a goal of greater than 80% code-coverage.</li>
-        <li>The old site was originally written in ASP.NET, then translated into PHP. The site included jQuery, and a MySQL DB.</li>
-    </ul>
-    <span>Get in touch with me - <a href="mailto:ben@erbapps.com">ben@erbapps.com</a></span>
+    <mat-card class="about-card">
+        <mat-card-title>ERB Apps as a tangible thing</mat-card-title>
+        <mat-card-content>
+            <ul>
+                <header>Current Staff:</header>
+                <li>Ben - The Guy</li>
+            </ul>
+            <span>This site is a portal to our solutions, tips and applications. The website itself is an ongoing project to learn different web-based technologies. </span>
+            <ul>
+                <li>The current website is written using the Angular framework with a goal of greater than 80% code-coverage.</li>
+                <li>The old site was originally written in ASP.NET, then translated into PHP. The site included jQuery, and a MySQL DB.</li>
+            </ul>
+            <span>Get in touch with me - <a href="mailto:ben@erbapps.com">ben@erbapps.com</a></span>
+        </mat-card-content>
+    </mat-card>
 </div>
