--- a/erb-apps/src/app/blog/blog.component.less
+++ b/erb-apps/src/app/blog/blog.component.less
@@ -5,26 +5,30 @@ div#page {
     background-color: #f0f0f0;
 }
 
-mat-card {
+.blog-card {
+    margin-top: 15px;
+}
+
+mat-card.post-card {
     margin-bottom: 5px;
 }
 
-.post-title {
+mat-card-title.post-title {
     font-size: 125%;
 }
 
-.post-body {
-    padding-top: 5px;
+mat-card-content.post-body {
+    padding-top: 10px;
 }
 
-h1 {
-    color: #447821;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 200%;
-}
-
-h3 {
+mat-card-title.blog-title {
     color: #447821;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 175%;
+}
+
+mat-card-subtitle.blog-subtitle {
+    color: #447821;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 150%;
 }
