Fixed some styling and centered logo.

--- a/erb-apps/src/app/header/header.component.less
+++ b/erb-apps/src/app/header/header.component.less
@@ -1,12 +1,12 @@
 div#page {
-  width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
 
-img {
-  margin-left: auto;
-  margin-right: auto;
+img.header-logo {
+  display: block;
+  margin: auto;
+  padding-bottom: 5px;
 }
 
 
