--- a/erb-apps/src/app/header/header.component.html
+++ b/erb-apps/src/app/header/header.component.html
@@ -17,7 +17,7 @@
         </button>
     </mat-menu>
     <div>
-        <img src="assets/img/logo.svg">
+        <img class="header-logo" src="assets/img/logo.svg">
     </div>
 </div>
 
