Added pagination to the blog and made title style consistent on About page.

--- a/erb-apps/src/app/about/about.component.html
+++ b/erb-apps/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div id="page">
     <mat-card class="about-card">
-        <mat-card-title>ERB Apps as a tangible thing</mat-card-title>
+        <mat-card-title class="about-title">ERB Apps as a tangible thing</mat-card-title>
         <mat-card-content>
             <ul>
                 <header>Current Staff:</header>
