--- a/erb-apps/src/app/about/about.component.less
+++ b/erb-apps/src/app/about/about.component.less
@@ -6,3 +6,9 @@ div#page {
 .about-card {
     margin-top: 10px;
 }
+
+mat-card-title.about-title {
+    color: #447821;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 150%;
+}
