--- a/erb-apps/src/app/app.component.html
+++ b/erb-apps/src/app/app.component.html
@@ -3,3 +3,5 @@
     <mat-divider></mat-divider>
     <router-outlet></router-outlet>
 </mat-card>
+<div id="modal-container" class="hidden"></div>
+<div id="overlay" (click)="removeModal()" class="hidden"></div>
