--- a/erb-apps/src/app/app.component.less
+++ b/erb-apps/src/app/app.component.less
@@ -4,8 +4,38 @@ mat-card#site-card {
     margin-left: auto;
     margin-right: auto;
 }
+
 mat-divider {
     width: 75%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.hidden{
+    display:none;
+}
+.show{
+    display:block;
+}
+
+#modal-container {
+    position:  fixed;
+    top: 300px;
+    left: 50%;
+    width: 375px;
+    background: white;
+    margin-left: -187.5px;
+    text-align: center;
+    box-shadow: 0px 0px 2px 1px black;
+    z-index: 100;
+}
+
+#overlay {
+    position: absolute;
+    top: 0px;
+    left:  0px;
+    z-index:  99;
+    background:  rgba(0,0,0,0.8);
+    width:  100%;
+    height: 100%;
 }
