--- a/erb-apps/src/app/blog/blog.component.html
+++ b/erb-apps/src/app/blog/blog.component.html
@@ -1,17 +1,17 @@
 <div id="page">
     <mat-card class="blog-card">
-        <mat-card-title class="blog-title">{{title}}</mat-card-title>
-        <mat-card-subtitle class="blog-subtitle">{{subtitle}}</mat-card-subtitle>
+        <mat-card-title class="blog-title">{{_title}}</mat-card-title>
+        <mat-card-subtitle class="blog-subtitle">{{_subtitle}}</mat-card-subtitle>
         <mat-card-content>
             <button mat-button (click)="createPost()">Create Post</button>
             <div class="blog">
-                <mat-card class="post-card" *ngFor="let post of blogPosts | paginate: { itemsPerPage: 5, currentPage: page }" (click)="onSelect(post)">
+                <mat-card class="post-card" *ngFor="let post of _blogPosts | paginate: { itemsPerPage: 5, currentPage: _page }" (click)="onSelect(post)">
                     <mat-card-title class="post-title">{{post.subject}}</mat-card-title>
                     <mat-card-subtitle>By {{post.poster}} on {{post.dateposted | date}}</mat-card-subtitle>
                     <mat-divider class="post-divide"></mat-divider>
                     <mat-card-content class="post-body">{{post.body}}</mat-card-content>
                 </mat-card>
-                <pagination-controls (pageChange)="page = $event"></pagination-controls>
+                <pagination-controls (pageChange)="_page = $event"></pagination-controls>
             </div>
         </mat-card-content>
     </mat-card>
