Refactored Header component to use a Material Toolbar for layout.

--- a/erb-apps/src/app/header/header.component.less
+++ b/erb-apps/src/app/header/header.component.less
@@ -3,10 +3,31 @@ div#page {
   margin-right: auto;
 }
 
+mat-toolbar {
+  min-height: 74px;
+  margin-bottom: 8px;
+}
+
+mat-toolbar-row {
+  padding: 8px;
+}
+
+.mat-icon-button {
+  margin-top: 8px;
+  margin-right: 8px;
+  min-width: 64px;
+  min-height: 64px;
+}
+
+.mat-icon {
+  vertical-align: middle;
+  height: 24px;
+  width: 24px;
+}
+
 img.header-logo {
   display: block;
-  margin: auto;
-  padding-bottom: 5px;
+  margin-top: 18px;
 }
 
 
