--- a/erb-apps/src/app/header/header.component.html
+++ b/erb-apps/src/app/header/header.component.html
@@ -1,23 +1,27 @@
 <div id="page">
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon>menu</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="goHome()">
-            <mat-icon>home</mat-icon>
-            <span>Home</span>
-        </button>
-        <button mat-menu-item (click)="goToDownloads()">
-            <mat-icon>arrow_downward</mat-icon>
-            <span>Downloads</span>
-        </button>
-        <button mat-menu-item (click)="goToAbout()">
-            <mat-icon>info</mat-icon>
-            <span>About</span>
-        </button>
-    </mat-menu>
-    <div>
-        <img class="header-logo" src="assets/img/logo.svg">
-    </div>
+    <mat-toolbar>
+        <mat-toolbar-row>
+            <button mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon class="mat-icon">menu</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="goHome()">
+                    <mat-icon>home</mat-icon>
+                    <span>Home</span>
+                </button>
+                <button mat-menu-item (click)="goToDownloads()">
+                    <mat-icon>arrow_downward</mat-icon>
+                    <span>Downloads</span>
+                </button>
+                <button mat-menu-item (click)="goToAbout()">
+                    <mat-icon>info</mat-icon>
+                    <span>About</span>
+                </button>
+            </mat-menu>
+            <div>
+                <img class="header-logo" src="assets/img/logo.svg">
+            </div>
+        </mat-toolbar-row>
+    </mat-toolbar>
 </div>
 
