Fixed broken background styles.

--- a/erb-apps/src/app/app.component.less
+++ b/erb-apps/src/app/app.component.less
@@ -1,5 +1,5 @@
 mat-card#site-card {
-    background: #ebebeb url(/erb-apps/src/assets/img/hexagon12x10.png) 50% 50% repeat;
+    background: #ebebeb url('../assets/img/hexagon12x10.png') 50% 50% repeat;
     width: 75%;
     margin-left: auto;
     margin-right: auto;
