--- a/erb-apps/src/app/blog/blog.component.less
+++ b/erb-apps/src/app/blog/blog.component.less
@@ -1,11 +1,11 @@
 div#page {
     margin-left: auto;
     margin-right: auto;
-    background-color: #f0f0f0;
 }
 
 .blog-card {
     margin-top: 15px;
+    background-color: #e6e6e6;
 }
 
 mat-card.post-card {
