--- a/erb-apps/src/app/header/header.component.less
+++ b/erb-apps/src/app/header/header.component.less
@@ -6,6 +6,8 @@ div#page {
 mat-toolbar {
   min-height: 74px;
   margin-bottom: 8px;
+  background-color: #e6e6e6;
+  border-radius: 3pt;
 }
 
 mat-toolbar-row {
