--- a/erb-apps/src/app/header/header.component.html
+++ b/erb-apps/src/app/header/header.component.html
@@ -21,6 +21,7 @@
             <div>
                 <img class="header-logo" src="assets/img/logo.svg">
             </div>
+            <button mat-button>Log In</button>
         </mat-toolbar-row>
     </mat-toolbar>
 </div>
