Updated style to include min-width. Updated Logo to have vectorized paths rather than text. Changed favicon.

--- a/erb-apps/src/app/app.component.less
+++ b/erb-apps/src/app/app.component.less
@@ -1,6 +1,7 @@
 mat-card#site-card {
     background: #ebebeb url('../assets/img/hexagon12x10.png') 50% 50% repeat;
     width: 75%;
+    min-width: 420px;
     margin-left: auto;
     margin-right: auto;
 }
