--- a/erb-apps/src/app/app.component.html
+++ b/erb-apps/src/app/app.component.html
@@ -3,4 +3,4 @@
     <router-outlet></router-outlet>
 </mat-card>
 <div id="modal-container" class="hidden"></div>
-<div id="overlay" (click)="removeModal()" class="hidden"></div>
+<div id="overlay" class="hidden"></div>
