--- a/erb-apps/src/app/about/about.component.html
+++ b/erb-apps/src/app/about/about.component.html
@@ -8,7 +8,8 @@
             </ul>
             <span>This site is a portal to our solutions, tips and applications. The website itself is an ongoing project to learn different web-based technologies. </span>
             <ul>
-                <li>The current website is written using the Angular framework with a goal of greater than 80% code-coverage.</li>
+                <li>The current website is written using the Angular framework with a goal of greater than 80% code-coverage.<br>
+                The backend of the website is an Express API, running on a Raspberry Pi, serving data from a PostgreSQL DB and Redis instance.</li>
                 <li>The old site was originally written in ASP.NET, then translated into PHP. The site included jQuery, and a MySQL DB.</li>
             </ul>
             <span>Get in touch with me - <a href="mailto:ben@erbapps.com">ben@erbapps.com</a></span>
