Connected LoginComponent to ModalService and the header.

--- a/erb-apps/src/app/header/header.component.html
+++ b/erb-apps/src/app/header/header.component.html
@@ -21,7 +21,7 @@
             <div>
                 <img class="header-logo" src="assets/img/logo.svg">
             </div>
-            <button mat-button>Log In</button>
+            <button mat-button (click)="logIn()">Log In</button>
         </mat-toolbar-row>
     </mat-toolbar>
 </div>
