--- a/erb-apps/src/app/user/login/login.component.html
+++ b/erb-apps/src/app/user/login/login.component.html
@@ -7,7 +7,7 @@
         </div>
         <div>
             <mat-form-field class="input-field">
-                <input #password matInput placeholder="Password">
+                <input #password matInput placeholder="Password" type="password">
             </mat-form-field>
         </div>
         <button mat-button (click)="submit(username.value, password.value)">Submit</button>
